; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_tak.c_ff_tak_check_crc.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_tak.c_ff_tak_check_crc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@AVERROR_INVALIDDATA = common dso_local global i32 0, align 4
@AV_CRC_24_IEEE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ff_tak_check_crc(i32* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  %8 = load i32, i32* %5, align 4
  %9 = icmp ult i32 %8, 4
  br i1 %9, label %10, label %12

10:                                               ; preds = %2
  %11 = load i32, i32* @AVERROR_INVALIDDATA, align 4
  store i32 %11, i32* %3, align 4
  br label %31

12:                                               ; preds = %2
  %13 = load i32, i32* %5, align 4
  %14 = sub i32 %13, 3
  store i32 %14, i32* %5, align 4
  %15 = load i32*, i32** %4, align 8
  %16 = load i32, i32* %5, align 4
  %17 = zext i32 %16 to i64
  %18 = getelementptr inbounds i32, i32* %15, i64 %17
  %19 = call i64 @AV_RB24(i32* %18)
  store i64 %19, i64* %7, align 8
  %20 = load i32, i32* @AV_CRC_24_IEEE, align 4
  %21 = call i32 @av_crc_get_table(i32 %20)
  %22 = load i32*, i32** %4, align 8
  %23 = load i32, i32* %5, align 4
  %24 = call i64 @av_crc(i32 %21, i32 13501623, i32* %22, i32 %23)
  store i64 %24, i64* %6, align 8
  %25 = load i64, i64* %7, align 8
  %26 = load i64, i64* %6, align 8
  %27 = icmp ne i64 %25, %26
  br i1 %27, label %28, label %30

28:                                               ; preds = %12
  %29 = load i32, i32* @AVERROR_INVALIDDATA, align 4
  store i32 %29, i32* %3, align 4
  br label %31

30:                                               ; preds = %12
  store i32 0, i32* %3, align 4
  br label %31

31:                                               ; preds = %30, %28, %10
  %32 = load i32, i32* %3, align 4
  ret i32 %32
}

declare dso_local i64 @AV_RB24(i32*) #1

declare dso_local i64 @av_crc(i32, i32, i32*, i32) #1

declare dso_local i32 @av_crc_get_table(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
